--- a/src/Components/Sidebar/Sidebar.module.css
+++ b/src/Components/Sidebar/Sidebar.module.css
@@ -6,8 +6,6 @@
     padding-left: 1%;
     padding-right: 1%;
     overflow-y: auto;
-    overflow-x: auto;
-
 }
 
 .sidebarTop {
@@ -40,7 +38,6 @@
 .chatPreviewList {
   display: flex;
   flex-direction: column;
-  gap: 20px;
 }
 
 .icon {
